Add session listing to API
